[package]
name = "achievement-enabler"
version = "0.1.0"
edition = "2021"

[dependencies]
rivets = { path = "../rivets" }
retour = { version = "0.3", features = ["static-detour"] }
anyhow = "1.0.86"
ctor = "0.2.8"

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"