[package]
name = "achievement-enabler"
version = "0.1.0"
edition = "2021"

[dependencies]
rivets = { git = "https://github.com/factorio-rivets/rivets-rs" }
windows = { version = "0.58.0", features = [] }

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
